ts-tests/baselines/reference/importVsLetShadowing.errors.txt
importVsLetShadowing.ts(11,1): error TS2451: Cannot redeclare block-scoped variable 'b'.
importVsLetShadowing.ts(18,1): error TS2451: Cannot redeclare block-scoped variable 'd'.
importVsLetShadowing.ts(25,1): error TS2451: Cannot redeclare block-scoped variable 'a'.
importVsLetShadowing.ts(32,1): error TS2451: Cannot redeclare block-scoped variable 'types'.
importVsLetShadowing.ts(43,1): error TS2451: Cannot redeclare block-scoped variable 'defaultValue'.
importVsLetShadowing.ts(53,1): error TS2451: Cannot redeclare block-scoped variable 'MyType'.


==== importVsLetShadowing.ts (6 errors) ====
    // ===== PART 1: Multiple imports from same module =====
    import { a, b, c } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    let b = 10; // Error: Duplicate identifier 'b'
    ~~~~~~~~~~~~
    Additional locations were found in the same file.
    ~~~~~~~~~~~~
    import { a, b, c } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    // ===== PART 2: Import alias vs local let =====
    import { a as d } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    let d = 20; // Error: Duplicate identifier 'd'
    ~~~~~~~~~~~~
    Additional locations were found in the same file.
    ~~~~~~~~~~~~
    import { a as d } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    // ===== PART 3: Re-export should not conflict with local =====
    export { a } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    const a = 30; // Error: Duplicate identifier 'a'
    ~~~~~~~~~~~~~~
    Additional locations were found in the same file.
    ~~~~~~~~~~~~
    export { a } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    // ===== PART 4: Namespace import vs local =====
    import * as types from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    const types = 40; // Error: Duplicate identifier 'types'
    ~~~~~~~~~~~~~~~~~~
    Additional locations were found in the same file.
    ~~~~~~~~~~~~
    import * as types from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    // ===== PART 5: Default import vs local =====
    import defaultValue from "./defaultExport";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    const defaultValue = 456; // Error: Duplicate identifier 'defaultValue'
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    Additional locations were found in the the same file.
    ~~~~~~~~~~~~
    import defaultValue from "./defaultExport";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    // ===== PART 6: Type-only import should not conflict with value =====
    import { type MyType } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    const MyType = 789; // Error: Duplicate identifier 'MyType'
    ~~~~~~~~~~~~~~~~~~~~~
    Additional locations were found in the same file.
    ~~~~~~~~~~~~
    import { type MyType } from "./types";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
